fix: pagination design and spacing

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -76,3 +76,7 @@ a {
   background: #000000;
   opacity: 0.8;
 }
+
+.mb-15 {
+  margin-bottom: 15px;
+}
