--- a/src/scss/pages/_blogs.scss
+++ b/src/scss/pages/_blogs.scss
@@ -62,7 +62,7 @@
 .blog-list {
   &__wrapper {
     margin-top: 32px;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
   }
 
   &__content--desktop {
